--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.5",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "promise": "^8.0.3",
     "s": "^1.0.0"
